samples/_failures_safe/1761170426_91051f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f327cc9.c: In function ‘main’:
./samples/SAFE/__tmp_7f327cc9.c:150:5: error: expected declaration or statement at end of input
  150 |     init_matrix(&mat2);
      |     ^~~~~~~~~~~
